Página de error 404 adicionada

--- a/src/app/pages/detalhe/detalhe.component.html
+++ b/src/app/pages/detalhe/detalhe.component.html
@@ -3,4 +3,4 @@
         <i class="material-icons left">date_range</i>
         <strong>Data de empréstimo:</strong>{{ emprestimo?.data_emprestimo_format }}</li>
 </ul>
-
+{{emprestimo?.localizacao_id}}
