--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col s12">
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card z-depth-5 hoverable">
+                    <div class="card-image">
+                      <img src="../../../assets/img/notebook2.jpg">
+                      <span class="card-title indigo-text indigo-darken-4">Novo empréstimo</span>
+                      <a class="btn-floating halfway-fab waves-effect waves-light red pulse" routerLink="/novo-emprestimo"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content teal lighteen-2">
+                      <p>Criar novo empréstimo</p>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+</div>
