--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -16,7 +16,8 @@
       <li><a routerLink="/novo-emprestimo">Criar novo empréstimo</a></li>
     </ul>
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper teal lighteen-4">
+        <a routerLink="/home" class="brand-logo">Página inicial<i class="material-icons">home</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a routerLink="/relatorios">Relatórios</a></li>
           <li><a class="dropdown-trigger" data-target="dropdown1">Empréstimos<i class="material-icons right">arrow_drop_down</i></a></li>
