--- a/src/app/pages/novo-emprestimo/novo-emprestimo.component.html
+++ b/src/app/pages/novo-emprestimo/novo-emprestimo.component.html
@@ -1,2 +1,1 @@
-Data de empréstimo:
-<input type="text" class="datepicker">
+<input type="text" class="datepicker" placeholder="Data de empréstimo"> 
