--- a/src/app/pages/emprestimos/emprestimos.component.html
+++ b/src/app/pages/emprestimos/emprestimos.component.html
@@ -1,4 +1,9 @@
-<table class="striped highlight responsive-table centered">
+<div *ngIf="emprestimo == undefined">
+    <div [class]="statusEmp.progress">
+        <div [class]="statusEmp.indeterminate"></div>
+    </div>
+</div>
+<table class="striped highlight responsive-table centered" *ngIf="emprestimos?.length >  0; else semRegistros">
     <thead>
         <tr>
             <th>#</th>
@@ -24,4 +29,8 @@
             </td>
         </tr>
     </tbody>
-</table>    
+</table>   
+
+<ng-template #semRegistros>
+    <h1>Nenhum resultado encontrado</h1>
+</ng-template>
