--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,17 @@
-<div class="row">
-    <div class="col s12">
-        <div class="row">
-            <div class="col s12 m6">
-                <div class="card z-depth-5 hoverable">
-                    <div class="card-image">
-                      <img src="../../../assets/img/notebook2.jpg">
-                      <span class="card-title indigo-text indigo-darken-4">Novo empréstimo</span>
-                      <a class="btn-floating halfway-fab waves-effect waves-light red pulse" routerLink="/novo-emprestimo"><i class="material-icons">add</i></a>
-                    </div>
-                    <div class="card-content teal lighteen-2">
-                      <p>Criar novo empréstimo</p>
-                    </div>
-                  </div>
-            </div>
+<div class="container">
+  <div class="row">
+    <div class="col s4" *ngFor="let x of data">
+      <div class="card z-depth-5 hoverable">
+        <div class="card-image">
+          <img [src]="x.imagem" class="img-content">
+          <span class="card-title grey-text indigo-darken-4 negrito center-align">{{ x.titulo }}</span>
+          <a class="btn-floating halfway-fab waves-effect waves-light red pulse" [routerLink]="x.router" (click)="dataService.data = x"><i
+              class="material-icons">{{ x.icon }}</i></a>
         </div>
+        <div class="card-content teal lighteen-2">
+          <p>{{ x.descricao }}</p>
+        </div>
+      </div>
+
     </div>
-</div>
+  </div> 
