--- a/src/app/pages/novo-emprestimo/novo-emprestimo.component.html
+++ b/src/app/pages/novo-emprestimo/novo-emprestimo.component.html
@@ -1,1 +1,44 @@
-<input type="text" class="datepicker" placeholder="Data de empréstimo"> 
+<div class="container">
+    <div class="row">
+        <form class="col s12">
+            <div class="row">
+                <div class="input-field col s12">
+                    <input type="text" class="datepicker" id="calendar">
+                    <label for="calendar">Data de empréstimo</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <select>
+                        <option value="" disabled selected>Tipo de movimentação</option>
+                        <option value="I">Interna</option>
+                        <option value="E">Externa</option>
+                    </select>
+                    <label>Tipo de movimentação</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <select class="browser-default">
+                        <option value="" disabled selected>Localização destino</option>
+                        <option *ngFor="let x of localizacoes">a</option>
+                    </select>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <textarea id="textarea1" class="materialize-textarea"></textarea>
+                    <label for="textarea1">Observação</label>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input type="text" class="modal-trigger" href="#modal1">
+                    <label for="solicitante">Solicitante do empréstimo</label>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
